--- a/src/css/home.css
+++ b/src/css/home.css
@@ -7,16 +7,24 @@
   background-size: 100%;
   display: flex;
   justify-content: center;
-  height: 130vw;
+  height: 150vw;
   align-items: flex-end;
-  background-image: url(./../assets/img/header/header4_100.webp);
-  background-position-y: -4rem;
+  background-image: url(./../assets/img/header/header4_100.png);
+  background-image:
+    -webkit-image-set(
+      url(./../assets/img/header/header4_100.webp) 1x
+    );
+  background-position-y: 0;
 
   @media (--md) {
     height: 78vw;
     align-items: flex-end;
     background-size: 104%;
     background-image: url(./../assets/img/header/header3_100.webp);
+    background-image:
+      -webkit-image-set(
+        url(./../assets/img/header/header3_100.webp) 1x
+      );
     background-position: -2rem 0;
     padding-bottom: 6rem;
   }
@@ -25,6 +33,10 @@
     height: 70vw;
     background-size: 108%;
     background-image: url(./../assets/img/header/header2_100.webp);
+    background-image:
+      -webkit-image-set(
+        url(./../assets/img/header/header2_100.webp) 1x
+      );
     background-position: -4rem -11rem;
   }
 
@@ -32,6 +44,10 @@
     height: 55vw;
     background-size: 103%;
     background-image: url(./../assets/img/header/header1_100.webp);
+    background-image:
+      -webkit-image-set(
+        url(./../assets/img/header/header1_100.webp) 1x
+      );
     background-position: -3rem -9rem;
   }
 }
@@ -43,7 +59,7 @@
 .header__mobile {
   color: var(--background-color);
   width: 100vw;
-  height: 4vh;
+  height: 7rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -263,7 +279,7 @@
 /*-------------------FAMILIEDAG--------------------*/
 
 .familiedag {
-  height: 46vh;
+  height: 82rem;
   background-color: var(--primary-color);
   display: flex;
   align-items: center;
@@ -376,7 +392,7 @@
 /*-------NIEUWSBRIEF--------*/
 
 .nieuwsbrief {
-  height: 46vh;
+  height: 82rem;
   display: flex;
   flex-flow: column;
   align-items: center;
@@ -437,26 +453,6 @@
   }
 }
 
-/* .aftermovie__beeld {
-  width: 95vw;
-  height: 16rem;
-
-  @media (--md) {
-    width: 90vw;
-    height: 39rem;
-  }
-
-  @media (--lg) {
-    width: 50vw;
-    height: 29rem;
-  }
-
-  @media (--xl) {
-    width: 50vw;
-    height: 41rem;
-  }
-} */
-
 .nieuwsbrief__article {
   display: flex;
   flex-flow: column;
@@ -500,6 +496,27 @@
   @media (--xl) {
     height: 5.5rem;
     width: 51rem;
+  }
+}
+
+input[type='text'] {
+  border-style: ridge;
+}
+
+.nieuwsbrief__tekst {
+  margin-left: 0;
+
+  @media (--md) {
+    padding-top: 2rem;
+    margin-left: -2rem;
+  }
+
+  @media (--lg) {
+    margin-left: -5rem;
+  }
+
+  @media (--xl) {
+    margin-left: -7rem;
   }
 }
 
@@ -556,7 +573,7 @@
 }
 
 .nieuwsbrief__form {
-  width: 34rem;
+  width: 30rem;
 
   @media (--md) {
     width: 34rem;
