--- a/src/css/site-header.css
+++ b/src/css/site-header.css
@@ -23,11 +23,17 @@
 .header__bg {
   background-color: var(--background-color);
   box-shadow: 0 0 2rem 1rem rgba(0, 0, 0, .05);
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+  top: -5px;
 
   @media (--lg) {
     background-color: rgba(255, 255, 255, 0);
     box-shadow: 0 0 2rem 1rem rgba(0, 0, 0, 0);
     height: 6vh;
+    position: relative;
+    top: 0;
   }
 
   @media (--xl) {
@@ -352,6 +358,7 @@
   grid-area: contact;
   grid-column: 1;
   grid-row: 5;
+  width: 20rem;
 
   @media (--md) {
     grid-column: 3;
@@ -369,8 +376,8 @@
   grid-column: 1 / 3;
   grid-row: 2 / 4;
   display: grid;
-  grid-template-columns: repeat(2, 45%);
-  grid-template-rows: repeat(3, 10rem);
+  grid-template-columns: repeat(2, 45vw);
+  grid-template-rows: 10rem repeat(2, 17rem);
   grid-template-areas:
     ' titel titel '
     ' sponsors sponsors '
@@ -379,7 +386,7 @@
   @media (--md) {
     grid-column: 1 / 4;
     grid-row: 2 / 3;
-    grid-template-columns: repeat(4, 25%);
+    grid-template-columns: repeat(4, 25vw);
     grid-template-rows: repeat(2, 1fr);
     grid-template-areas:
       ' . titel titel .'
@@ -415,8 +422,9 @@
 .sponsors {
   grid-area: sponsors;
   display: grid;
-  grid-template-columns: repeat(2, 45%);
-  grid-template-rows: repeat(2, 1fr);
+  align-items: center;
+  grid-template-columns: repeat(2, 45vw);
+  grid-template-rows: repeat(2, 16rem);
   grid-template-areas:
     '1 2'
     '3 4 ';
@@ -426,11 +434,42 @@
   /* background-color: var(--background-color); */
 
   @media (--md) {
-    grid-template-columns: repeat(4, 25%);
-    grid-template-rows: 1fr;
+    grid-template-columns: repeat(4, 21vw);
+    grid-template-rows: 16rem;
     grid-template-areas: '1 2 3 4';
+    align-items: center;
     grid-column: 1 / span 6;
     grid-row: 2 / 3;
+  }
+
+  @media (--lg) {
+    grid-template-columns: repeat(4, 24vw);
+    grid-template-rows: 16rem;
+  }
+
+  @media (--xl) {
+    grid-template-columns: repeat(4, 24vw);
+    grid-template-rows: 18rem;
+  }
+}
+
+.sponsor__image {
+  width: 30vw;
+  height: 15rem;
+
+  @media (--md) {
+    width: 30vw;
+    height: 15rem;
+  }
+
+  @media (--lg) {
+    width: 30vw;
+    height: 15rem;
+  }
+
+  @media (--xl) {
+    width: 30vw;
+    height: 15rem;
   }
 }
 
