--- a/src/css/detail.css
+++ b/src/css/detail.css
@@ -1,9 +1,5 @@
 /*--------------ALGEMEEN-----------------*/
 
-.detail__praktisch {
-  background-color: var(--primary-color);
-}
-
 .terug {
   color: var(--background-color);
 }
@@ -25,19 +21,84 @@
 .detail__lijn {
   background-image: linear-gradient(0deg, #3e9798 50%, #3e9798 50%);
   background-repeat: no-repeat;
-  background-size: 47% .4rem;
+  background-size: 30% .8rem;
   background-position: 0 101%;
-  width: 20rem;
-  height: 4rem;
+  width: 28rem;
+  height: 13rem;
+
+  @media (--md) {
+    background-size: 27% .8rem;
+    height: 7rem;
+    width: 47rem;
+  }
+
+  @media (--lg) {
+    width: 48rem;
+  }
+
+  @media (--xl) {
+    background-size: 16% .8rem;
+    height: 9rem;
+    width: 128rem;
+  }
+}
+
+.praktisch__lijn {
+  height: 13rem;
+  background-position: 10px 101%;
+
+  @media (--md) {
+    height: 7rem;
+  }
+}
+
+.beeldmateriaal__lijn {
+  height: 13rem;
+
+  @media (--md) {
+    height: 7rem;
+  }
+}
+
+.ook__lijn {
+  height: 7rem;
 }
 /*--------------INTRO-----------------*/
 
-.detail__informatie {
+.detail__header {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 60rem;
+  flex-flow: column;
+  align-items: flex-start;
+  height: 110rem;
+  padding-top: 9rem;
+
+  @media (--md) {
+    justify-content: center;
+    width: 100%;
+    height: 85rem;
+  }
+
+  @media (--lg) {
+    padding-top: 3rem;
+    height: 80rem;
+  }
+
+  @media (--xl) {
+    height: 110rem;
+  }
+}
+
+.detail__informatie {
+  /* display: flex;
+  flex-flow: column;
+  height: 90rem;*/
+
+  @media (--md) {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 60rem;
+  }
 }
 
 .detail__omschrijving {
@@ -68,52 +129,114 @@
   padding-left: 10rem;
 }
 
-.beeld__img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: 50% 50%;
-  margin-right: 5rem;
-  margin-top: 5rem;
-}
-
 .detail__bekijkmeer {
   display: flex;
   justify-content: space-between;
   height: 10rem;
 }
+
 /*--------------PRAKTISCH-----------------*/
 
 .praktisch {
+  height: 83rem;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
   padding-top: 5rem;
   padding-bottom: 5rem;
+
+  @media (--md) {
+    height: 57rem;
+    padding-bottom: 0;
+  }
+
+  @media (--lg) {
+    height: 56rem;
+    display: flex;
+    flex-flow: row-reverse;
+    align-items: center;
+  }
+
+  @media (--xl) {
+    height: 73rem;
+  }
 }
 
 .praktisch__wrapper {
   display: flex;
+  flex-flow: column;
   justify-content: space-between;
   align-items: flex-start;
-  width: 40rem;
-  padding-top: 4rem;
+  width: 95vw;
+  height: 50rem;
   padding-bottom: 4rem;
+
+  @media (--md) {
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 80vw;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+    height: 25rem;
+  }
+
+  @media (--lg) {
+    display: flex;
+    flex-flow: column;
+    width: 34vw;
+    height: 54rem;
+  }
+
+  @media (--xl) {
+    height: 70rem;
+    justify-content: space-between;
+  }
 }
 
 .detail__praktisch {
-  height: 70rem;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  background-color: var(--primary-color);
+  height: 110rem;
+
+  @media (--md) {
+    height: 100rem;
+  }
+
+  @media (--lg) {
+    height: 90rem;
+  }
+
+  @media (--xl) {
+    height: 115rem;
+  }
 }
 
-.praktisch__datum::before,
-.praktisch__tijdstip::before,
-.praktisch__locatie::before {
-  content: '';
-  background-size: 30%;
+.praktisch__datum,
+.praktisch__tijdstip,
+.praktisch__locatie {
+  display: flex;
+
+  @media (--md) {
+  }
+
+  @media (--lg) {
+  }
+}
+
+.praktisch__icon {
   width: 10rem;
-  height: 5rem;
-  background-color: var(--background-color);
-  background-repeat-x: no-repeat;
-  background-repeat-y: no-repeat;
-  display: inline-block;
-  justify-content: center;
+
+  @media (--md) {
+    width: 7rem;
+  }
+
+  @media (--lg) {
+    width: 9rem;
+  }
 }
 
 .praktisch__img {
@@ -124,35 +247,153 @@
   /* clip- ath: polygon(0 0, 100% 0, 100% 65%, 0 65%); */
 }
 
-.praktisch__datum::before {
-  background-image: url(./../assets/img/icons/calender.svg);
-}
-
-.praktisch__tijdstip::before {
-  background-image: url(./../assets/img/icons/time.svg);
-}
-
-.praktisch__locatie::before {
-  background-image: url(./../assets/img/icons/locatie.svg);
-}
-
 /*--------------BEELDMATERIAAL-----------------*/
 
-.beeldmateriaal {
-  border-top: 1px solid #ccc;
-  overflow: auto;
-  height: 70rem;
+.beeld__headerimg {
+  /* width: 450px;
+  position: relative;
+  float: left; */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 50% 50%;
+  margin-right: 5rem;
+  margin-top: 5rem;
 }
 
-.beeld__image {
-  width: 450px;
-  position: relative;
-  float: left;
+.beeldmateriaal {
+  overflow: auto;
+  height: 90rem;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-around;
+
+  @media (--md) {
+    height: 96rem;
+  }
+
+  @media (--lg) {
+    height: 96rem;
+  }
+
+  @media (--xl) {
+    height: 115rem;
+  }
+}
+
+.beeldmateriaal__wrapper {
+  display: flex;
+  flex-flow: column;
+  justify-content: space-around;
+  height: 60rem;
+
+  @media (--md) {
+    height: 65rem;
+  }
+
+  @media (--lg) {
+    flex-flow: row;
+    height: 55rem;
+  }
+
+  @media (--xl) {
+    height: 65rem;
+  }
+}
+
+.kaartje__img {
+  overflow: hidden;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.grootbeeld__img {
+  overflow: hidden;
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.kaartje__image {
+  width: 100%;
+  height: 40rem;
+  overflow: hidden;
+  padding-right: 0;
+
+  @media (--md) {
+    height: 40rem;
+  }
+
+  @media (--lg) {
+    width: 60vw;
+    height: 46rem;
+    padding-right: 4rem;
+  }
+
+  @media (--xl) {
+    height: 60rem;
+    padding-right: 6rem;
+  }
+}
+
+.grootbeeld__image {
+  width: 100%;
+  /* overflow: hidden; */
+  height: 40rem;
+
+  @media (--md) {
+    height: 42rem;
+  }
+
+  @media (--lg) {
+    width: 223vw;
+    height: 55rem;
+  }
+
+  @media (--xl) {
+    width: ;
+    height: 65rem;
+  }
+}
+
+.beeld__img {
+  max-height: 160px;
+  max-width: 20vw;
+
+  @media (--md) {
+    max-height: 170px;
+    max-width: 60vw;
+  }
 }
 
 .beeld__li {
   float: left;
   margin: 0 10px 0 0;
+
+  @media (--md) {
+    margin: 0 17px 0 0;
+  }
+}
+
+.beeld__ul {
+  @media (--md) {
+    overflow: auto;
+    padding-top: 1rem;
+    height: 22rem;
+  }
+
+  @media (--lg) {
+    height: 55rem;
+    overflow: auto;
+    padding-left: 1rem;
+  }
+
+  @media (--xl) {
+    height: 65rem;
+  }
 }
 /*--------------SOCIAL-----------------*/
 
@@ -184,5 +425,78 @@
 /*--------------OOKOP-----------------*/
 
 .ookop {
-  height: 80rem;
+  height: 140rem;
+
+  @media (--md) {
+    height: 80rem;
+  }
+
+  @media (--lg) {
+    height: 70rem;
+  }
+
+  @media (--xl) {
+    height: 90rem;
+  }
+}
+
+.ookop__section {
+  display: grid;
+  grid-area: content;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  grid-gap: 4rem;
+  justify-self: space-between;
+  padding-bottom: 2rem;
+
+  @media (--md) {
+    justify-self: center;
+  }
+
+  @media (--xl) {
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    grid-gap: 4rem;
+  }
+}
+
+.ookop__article:nth-last-of-type(4) {
+  display: none;
+
+  @media (--xl) {
+    display: block;
+  }
+}
+
+.ookop__article:nth-child(2) {
+  display: block;
+
+  @media (--md) {
+    display: none;
+  }
+
+  @media (--lg) {
+    display: block;
+  }
+}
+
+.ookop__image {
+  position: absolute;
+  width: 30rem;
+  height: 20rem;
+  overflow: hidden;
+  border-radius: .5rem;
+  object-fit: cover;
+  text-align: center;
+  z-index: -1;
+
+  @media (--md) {
+    width: 35.2rem;
+  }
+
+  @media (--lg) {
+    width: 31rem;
+  }
+
+  @media (--xl) {
+    width: 32rem;
+  }
 }
