--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -100,10 +100,13 @@
   font-weight: bold;
 }
 
+.color {
+  color: var(--color-accent);
+}
 /*--------HOME----------*/
 
 .titel__home {
-  font-size: 4.6rem;
+  font-size: 4.1rem;
   line-height: 1.2;
 
   @media (--md) {
