--- a/src/css/detail.css
+++ b/src/css/detail.css
@@ -11,10 +11,9 @@
 
 .detail__terug {
   background-color: var(--color-accent);
-  width: 20rem;
-  height: 5rem;
+  width: 100%;
+  height: 7rem;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
@@ -43,8 +42,12 @@
   }
 }
 
+.detail__tekst {
+  height: 50rem;
+}
+
 .praktisch__lijn {
-  height: 13rem;
+  height: 6rem;
   background-position: 10px 101%;
 
   @media (--md) {
@@ -53,7 +56,7 @@
 }
 
 .beeldmateriaal__lijn {
-  height: 13rem;
+  height: 6rem;
 
   @media (--md) {
     height: 7rem;
@@ -61,7 +64,7 @@
 }
 
 .ook__lijn {
-  height: 7rem;
+  height: 6rem;
 }
 /*--------------INTRO-----------------*/
 
@@ -88,16 +91,62 @@
   }
 }
 
+.informatie__mobile {
+  display: block;
+  background-color: var(--background-color);
+  height: 12rem;
+  width: 100%;
+  text-align: center;
+  padding-top: 2rem;
+
+  @media (--md) {
+    display: none;
+  }
+}
+
+.facebook,
+.aanwezig__li {
+  background-color: var(--color-light);
+  padding: 2rem;
+}
+
+.aanwezig__li {
+  display: flex;
+}
+
+.aanwezig {
+  width: 24rem;
+  height: 6rem;
+  background-color: var(--background-color);
+  color: var(--color-light);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.detail__link {
+  text-decoration: none;
+}
+
 .detail__informatie {
-  /* display: flex;
-  flex-flow: column;
-  height: 90rem;*/
+  display: flex;
+  flex-flow: column-reverse;
+  justify-content: space-between;
+  height: 84rem;
+  background-image: url(./../assets/img/bg/detail_100.png);
+  background-image:
+    -webkit-image-set(
+      url(./../assets/img/bg/detail_100.webp) 1x
+    );
+  background-repeat: no-repeat;
 
   @media (--md) {
     display: flex;
+    flex-flow: row;
     align-items: center;
     width: 100%;
     height: 60rem;
+    background-image: none;
   }
 }
 
@@ -122,17 +171,31 @@
 
 .beeld__tekst {
   width: 40%;
+  height: 50rem;
+  display: flex;
+  justify-content: space-between;
+  flex-flow: column;
+
+  @media (--md) {
+    margin-top: 0;
+  }
 }
 
 .beeld__groot {
   width: 60%;
   padding-left: 10rem;
+  margin-top: -7rem;
+
+  @media (--md) {
+    margin-top: 0;
+  }
 }
 
 .detail__bekijkmeer {
   display: flex;
   justify-content: space-between;
   height: 10rem;
+  align-items: center;
 }
 
 /*--------------PRAKTISCH-----------------*/
@@ -160,6 +223,10 @@
   @media (--xl) {
     height: 73rem;
   }
+}
+
+.praktisch__subtitel {
+  color: var(--color-light);
 }
 
 .praktisch__wrapper {
@@ -229,6 +296,7 @@
 
 .praktisch__icon {
   width: 10rem;
+  opacity: .2;
 
   @media (--md) {
     width: 7rem;
@@ -249,24 +317,33 @@
 
 /*--------------BEELDMATERIAAL-----------------*/
 
-.beeld__headerimg {
-  /* width: 450px;
-  position: relative;
-  float: left; */
+.beeld__headerimage {
+  overflow: hidden;
+  object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+.beeld__headerimg {
+  width: 30rem;
+  height: 30rem;
   object-fit: cover;
   object-position: 50% 50%;
-  margin-right: 5rem;
-  margin-top: 5rem;
+
+  @media (--md) {
+    margin-top: 5rem;
+    margin-right: 5rem;
+  }
 }
 
 .beeldmateriaal {
   overflow: auto;
-  height: 90rem;
+  height: 75rem;
   display: flex;
   flex-flow: column;
   justify-content: space-around;
+  padding-top: 8rem;
+  padding-bottom: 5rem;
 
   @media (--md) {
     height: 96rem;
@@ -398,7 +475,8 @@
 /*--------------SOCIAL-----------------*/
 
 .socials {
-  height: 40rem;
+  height: 24rem;
+  margin: 5rem auto 10rem;
 }
 
 .detail__socials {
@@ -407,7 +485,8 @@
   justify-content: space-between;
   align-items: center;
   width: 20rem;
-  height: 18rem;
+  height: 20rem;
+  overflow: hidden;
 }
 
 .socials__media {
@@ -415,17 +494,34 @@
   justify-content: space-between;
   background-size: 50%;
   width: 20rem;
-  background-color: var(--primary-color);
+  height: 6rem;
 }
 
 .social__link {
   color: var(--primary-color);
 }
 
+.ontdek {
+  width: 22rem;
+
+  @media (--lg) {
+    width: 24rem;
+  }
+
+  @media (--xl) {
+    width: 29rem;
+  }
+}
+
 /*--------------OOKOP-----------------*/
 
 .ookop {
   height: 140rem;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
+  padding-top: 8rem;
+  padding-bottom: 5rem;
 
   @media (--md) {
     height: 80rem;
@@ -499,4 +595,8 @@
   @media (--xl) {
     width: 32rem;
   }
+}
+
+.ontdekking {
+  align-self: center;
 }
