--- a/src/css/programma.css
+++ b/src/css/programma.css
@@ -9,11 +9,7 @@
 
   @media (--sm) {
     height: 30rem;
-    background-image:
-      url(
-        './../assets/img/bg/4_100.webp',
-        './../assets/img/bg/4_100.png'
-      );
+    background-image: url(./../assets/img/bg/4_100.png);
     background-image: -webkit-image-set(url(./../assets/img/bg/4_100.webp));
     background-repeat: no-repeat;
   }
@@ -21,11 +17,7 @@
   @media (--md) {
     height: 30rem;
     background-size: 104%;
-    background-image:
-      url(
-        './../assets/img/bg/3_100.webp',
-        './../assets/img/bg/3_100.png'
-      );
+    background-image: url(./../assets/img/bg/3_100.png);
     background-image: -webkit-image-set(url(./../assets/img/bg/3_100.webp));
     background-position: -2rem 2rem;
     background-repeat: no-repeat;
@@ -35,11 +27,7 @@
     height: 70rem;
     top: 0;
     background-size: 104%;
-    background-image:
-      url(
-        './../assets/img/bg/2_100.webp',
-        './../assets/img/bg/2_100.png'
-      );
+    background-image: url(./../assets/img/bg/2_100.png);
     background-image: -webkit-image-set(url(./../assets/img/bg/2_100.webp));
     background-position: -4rem -1rem;
     background-repeat: no-repeat;
@@ -48,11 +36,7 @@
   @media (--xl) {
     height: 160rem;
     background-size: 104%;
-    background-image:
-      url(
-        './../assets/img/bg/1_100.webp',
-        './../assets/img/bg/1_100.png'
-      );
+    background-image: url(./../assets/img/bg/1_100.png);
     background-image: -webkit-image-set(url(./../assets/img/bg/1_100.webp));
     background-position: -5rem -3rem;
     background-repeat: no-repeat;
@@ -276,7 +260,7 @@
 .pijltje {
   content: '\276F';
   will-change: transform;
-  transform: rotate(90deg);
+  transform: rotate(270deg);
 }
 
 .down {
@@ -294,15 +278,14 @@
   cursor: pointer;
 }
 
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
 .nodropdown {
   display: none;
   position: absolute;
   z-index: 1;
+
+  @media (--md) {
+    display: none;
+  }
 }
 
 .filter_section {
@@ -534,7 +517,7 @@
   display: grid;
   align-content: end;
   grid-area: info;
-  width: 32rem;
+  width: 30rem;
   height: 12rem;
   grid-template-columns: 30rem;
   grid-template-rows: repeat(3, 3.6rem);
